# biomedical_ner

./: README.md  TODO.md  pyproject.toml  setup.cfg
src/: create_dataset.sh  get_bc5cdr_corpus.sh  get_ncbi_disease_corpus.sh
src/modules/: brat_to_xml.py  convert_xml_to_samples.py
src/modules/dataset/: brat_to_xml.py  convert_xml_to_samples.py  preprocess_i2b2_2006_deidentification.py  preprocess_mednli.py  xml_train_test_split.py
src/modules/mednli/: check_performance_of_bert.sh  logger.py  mednli.py
src/modules/ner/: ner_tagger.py  train_ner_tagger.py
tests/modules/: ncbi_disease_corpus_sample.xml  sample_ncbi_disease_corpus.txt  test_brat_to_xml.py
tests/modules/dataset/: sample_ncbi_disease_corpus.xml  test_brat_to_xml.py
