[tool.poetry]
name = "biomedical_ner"
version = "0.1.0"
description = ""
authors = ["yutanakamura-tky <yutanakamura.tky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.4"
numpy = "<1.20.2"
pandas = "<1.2.3"
notebook = "^6.3.0"
torch = "1.6.0"
sklearn = "^0.0"
transformers = "4.4.2"
pytorch-lightning = "^1.2.5"
matplotlib = "<3.4.0"
seaborn = "^0.11.1"
plotly = "^4.14.3"
scipy = "<1.6.2"
torchvision = "0.7.0"
allennlp = "<2.2.0"
bs4 = "^0.0.1"
lxml = "^4.6.3"
fsspec = "^0.8.7"
seqeval = "^1.2.2"
tensorflow = "^2.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.11.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
